--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,11 @@
       <artifactId>javafx-fxml</artifactId>
       <version>19.0.2</version>
     </dependency>
+    <dependency>
+      <groupId>org.xerial</groupId>
+      <artifactId>sqlite-jdbc</artifactId>
+      <version>3.41.2.2</version>
+    </dependency>
 
 <dependency>
       <groupId>org.junit.jupiter</groupId>
